--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -173,6 +173,7 @@
     <Content Include="Areas\Business\Css\images\scsfzrz.png" />
     <Content Include="Areas\Business\Css\images\share.png" />
     <Content Include="Areas\Business\Css\images\rzsj.png" />
+    <Content Include="Areas\Business\Css\images\rzsj2.png" />
     <Content Include="Areas\Business\Css\images\sorry.png" />
     <Content Include="Areas\Business\Css\images\system_photo1.jpg" />
     <Content Include="Areas\Business\Css\images\system_photo2.jpg" />
