--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -192,6 +192,7 @@
     <Content Include="Areas\Business\Css\images\warn.png" />
     <Content Include="Areas\Business\Css\images\wb_logo.png" />
     <Content Include="Areas\Business\Css\images\wxbd.png" />
+    <Content Include="Areas\Business\Css\images\wxbd_head_img.png" />
     <Content Include="Areas\Business\Css\images\xlwb.png" />
     <Content Include="Areas\Business\Css\images\yes.png" />
     <Content Include="Areas\Business\Css\images\righttip.png" />
@@ -209,6 +210,7 @@
     <Content Include="Areas\Business\Css\YXYZ.css" />
     <Content Include="Areas\Business\Css\YXYZCG.css" />
     <Content Include="Areas\Business\Css\ZHBD\WBBD.css" />
+    <Content Include="Areas\Business\Css\ZHBD\WXBD.css" />
     <Content Include="Areas\Business\Css\ZHBD\ZHBD.css" />
     <Content Include="Areas\Business\Css\ZHMM.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
@@ -238,6 +240,7 @@
     <Content Include="Areas\Business\Scripts\Business\YXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\YXYZCG.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHBD\WBBD.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZHBD\WXBD.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHBD\ZHBD.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHMM.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
@@ -345,6 +348,7 @@
     <Content Include="Areas\Business\Views\ZHBD\ZHBD.cshtml" />
     <Content Include="Areas\Business\Views\RZGL\RZGL.cshtml" />
     <Content Include="Areas\Business\Views\ZHBD\WBBD.cshtml" />
+    <Content Include="Areas\Business\Views\ZHBD\WXBD.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
