--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -143,6 +143,7 @@
     <Content Include="Areas\Business\Css\GRZL\MMSZ.css" />
     <Content Include="Areas\Business\Css\HBSJ.css" />
     <Content Include="Areas\Business\Css\HFCZ\HFCZ.css" />
+    <Content Include="Areas\Business\Css\HFCZ\ZFFS.css" />
     <Content Include="Areas\Business\Css\images\arrow_down.png" />
     <Content Include="Areas\Business\Css\images\arrow_up.png" />
     <Content Include="Areas\Business\Css\images\cellphone.png" />
@@ -202,6 +203,8 @@
     <Content Include="Areas\Business\Css\images\yyzzdsfrz.png" />
     <Content Include="Areas\Business\Css\images\yyzzfrrz.png" />
     <Content Include="Areas\Business\Css\images\yyzzptrz.png" />
+    <Content Include="Areas\Business\Css\images\zffs_wx.png" />
+    <Content Include="Areas\Business\Css\images\zffs_zfb.png" />
     <Content Include="Areas\Business\Css\images\zmsmrz.png" />
     <Content Include="Areas\Business\Css\LBXZ.css" />
     <Content Include="Areas\Business\Css\PageCommon.css" />
@@ -235,6 +238,7 @@
     <Content Include="Areas\Business\Scripts\Business\GRZL\MMSZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HBSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\HFCZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HFCZ\ZFFS.js" />
     <Content Include="Areas\Business\Scripts\Business\LBXZ.js" />
     <Content Include="Areas\Business\Scripts\Business\PageJson.js" />
     <Content Include="Areas\Business\Scripts\Business\RZGL\RZGL.js" />
@@ -367,6 +371,7 @@
     <Content Include="Areas\Business\Views\XXGL\XXGL.cshtml" />
     <Content Include="Areas\Business\Views\XXGL\XXGLMX.cshtml" />
     <Content Include="Areas\Business\Views\HFCZ\HFCZ.cshtml" />
+    <Content Include="Areas\Business\Views\HFCZ\ZFFS.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
