--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Common\Common.cs" />
     <Compile Include="Enum\XXLB.cs" />
     <Compile Include="Maps\CODES_Map.cs" />
+    <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Maps\YXJBXX_Map.cs" />
     <Compile Include="Maps\ZDDLXX_Map.cs" />
     <Compile Include="Models\CODES.cs" />
+    <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
     <Compile Include="Models\FWCZJBXX.cs" />
     <Compile Include="Models\JCXX.cs" />
