--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -139,6 +139,7 @@
     <Content Include="Areas\Business\Aspx\png.aspx" />
     <Content Include="Areas\Business\Css\BZZX\BZZX.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY.css" />
+    <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZDJS.css" />
     <Content Include="Areas\Business\Css\FBCG.css" />
     <Content Include="Areas\Business\Css\FWCZ.css" />
     <Content Include="Areas\Business\Css\GRZL\GRZL.css" />
@@ -149,6 +150,13 @@
     <Content Include="Areas\Business\Css\images\arrow_down.png" />
     <Content Include="Areas\Business\Css\images\arrow_down_big.png" />
     <Content Include="Areas\Business\Css\images\arrow_up.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_esjybzzx.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_fbgzltz.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_ftbg.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_rzsm.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_xxbsc.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_xxwffb.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_zdjs.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_zhmm.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_zhyecz.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_dhbmycx.png" />
@@ -240,6 +248,7 @@
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\js\npm.js" />
     <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX.js" />
     <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX_SY.js" />
+    <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX_SY_ZDJS.js" />
     <Content Include="Areas\Business\Scripts\Business\Common\Common.js" />
     <Content Include="Areas\Business\Scripts\Business\Common\Regular.js" />
     <Content Include="Areas\Business\Scripts\Business\FWCG\FWCG.js" />
@@ -396,6 +405,7 @@
     <Content Include="Areas\Business\Views\BZZX\BZZX_CJWT.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_LXKF.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_WZJY.cshtml" />
+    <Content Include="Areas\Business\Views\BZZX\BZZX_SY_ZDJS.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
