--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -211,6 +211,7 @@
     <Content Include="Areas\Business\Css\images\upload_small2.png" />
     <Content Include="Areas\Business\Css\images\warn.png" />
     <Content Include="Areas\Business\Css\images\wb_logo.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_mxcx_sj.png" />
     <Content Include="Areas\Business\Css\images\wxbd.png" />
     <Content Include="Areas\Business\Css\images\wxbd_head_img.png" />
     <Content Include="Areas\Business\Css\images\xlwb.png" />
@@ -228,7 +229,7 @@
     <Content Include="Areas\Business\Css\RZGL\RZGL.css" />
     <Content Include="Areas\Business\Css\WDFB.css" />
     <Content Include="Areas\Business\Css\WDSC.css" />
-    <Content Include="Areas\Business\Css\WDZJ\WDZJ.css" />
+    <Content Include="Areas\Business\Css\WDXJ\WDXJ_MXCX.css" />
     <Content Include="Areas\Business\Css\WZCX\WZCX.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGL.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGLMX.css" />
@@ -268,7 +269,7 @@
     <Content Include="Areas\Business\Scripts\Business\RZGL\RZGL.js" />
     <Content Include="Areas\Business\Scripts\Business\WDFB.js" />
     <Content Include="Areas\Business\Scripts\Business\WDSC.js" />
-    <Content Include="Areas\Business\Scripts\Business\WDZJ\WDZJ.js" />
+    <Content Include="Areas\Business\Scripts\Business\WDXJ\WDXJ_MXCX.js" />
     <Content Include="Areas\Business\Scripts\Business\WZCX\WZCX.js" />
     <Content Include="Areas\Business\Scripts\Business\XXGL\XXGL.js" />
     <Content Include="Areas\Business\Scripts\Business\XXGL\XXGLMX.js" />
@@ -343,7 +344,7 @@
     <Compile Include="Areas\Business\Controllers\RZGLController.cs" />
     <Compile Include="Areas\Business\Controllers\WDFBController.cs" />
     <Compile Include="Areas\Business\Controllers\WDSCController.cs" />
-    <Compile Include="Areas\Business\Controllers\WDZJController.cs" />
+    <Compile Include="Areas\Business\Controllers\WDXJController.cs" />
     <Compile Include="Areas\Business\Controllers\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHDLXXController.cs" />
@@ -412,7 +413,7 @@
     <Content Include="Areas\Business\Views\BZZX\BZZX_WZJY.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_ZDJS.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_ZHMM.cshtml" />
-    <Content Include="Areas\Business\Views\WDZJ\WDZJ.cshtml" />
+    <Content Include="Areas\Business\Views\WDXJ\WDXJ_MXCX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
