--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -60,7 +60,7 @@
     <Compile Include="BLL\RZGLBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
-    <Compile Include="BLL\WDZJBLL.cs" />
+    <Compile Include="BLL\WDXJBLL.cs" />
     <Compile Include="BLL\WZCXBLL.cs" />
     <Compile Include="BLL\XXGLBLL.cs" />
     <Compile Include="BLL\YHDLXXBLL.cs" />
