--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -212,20 +212,20 @@
     <Content Include="Areas\Business\Css\images\warn.png" />
     <Content Include="Areas\Business\Css\images\wb_logo.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wxzf.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_bjyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_gdyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_gfyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_gsyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_jsyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_jtyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_msyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_nyyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_payh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_pfyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_xyyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_zgyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_zsyh.png" />
-    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_wyzf_zxyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_bjyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_gdyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_gfyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_gsyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_jsyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_jtyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_msyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_nyyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_payh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_pfyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_xyyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zgyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zsyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zxyh.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zfbzf.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zffs_select.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_mxcx_sj.png" />
