银行汇款页面

--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -223,6 +223,7 @@
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_payh.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_pfyh.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_xyyh.png" />
+    <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_yhhk_jsyh.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zgyh.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zsyh.png" />
     <Content Include="Areas\Business\Css\images\WDZJ\wdxj_cz_zxyh.png" />
